# FastApi_init_db

./: .env.example  .gitignore  Readme.md  alembic.ini  command.txt  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_11_17_2155-f6f82696cf0e_first.py
src/: main.py  routers.py
src/config/database_conf/: clickhouse_config.py
src/lib/dto/: base_dto.py
src/lib/models/: base_model.py
src/lib/repository/: base_repository.py
